[package]
name = "yorool_gui2"
version = "0.1.0"
authors = ["milyin <milyin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez="0.5.1"
async-std = "1.4.0"
indexmap = "1.3.1"
async-call={path="../async-call"}